--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,7 @@
 {
     "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/css/app.css": "/css/app.css",
+    "/css/main.css": "/css/main.css",
+    "/js/job-application.js": "/js/job-application.js",
+    "/js/postjob.js": "/js/postjob.js"
 }
